--- a/.env
+++ b/.env
@@ -13,13 +13,15 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=f2b89b20d4312c7d69430418fa54e648
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DNS=gmail://inballfr@gmail.com
+MAILER_DSN=gmail://inballfr@gmail.com:iwruqokdmzpdcfuf@localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -27,5 +29,11 @@ APP_SECRET=f2b89b20d4312c7d69430418fa54e648
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+# DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
+DATABASE_URL=mysql://root:root@127.0.0.1:8889/basketinballSymf?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+# MAILER_DSN=gmail://USERNAME:PASSWORD@default
+###< symfony/google-mailer ###
